--- a/Test.ipynb
+++ b/Test.ipynb
@@ -115915,15 +115915,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello a\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Name: \")\n",
+    "print(\"Hello\", name)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
