--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\Github\\testRepos\\Test.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Github/testRepos/Test.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m num1 \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mNumber1: \u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Github/testRepos/Test.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m num2 \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mNumber2: \u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Github/testRepos/Test.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m operator \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWhat Operation: \u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'a'"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input(\"Number1: \"))\n",
     "num2 = int(input(\"Number2: \"))\n",
@@ -74531,6 +74543,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"A Shinigami [verb] my [adjective] [noun] out of the [noun] as if he were a vegetarian fishing a [noun] out of his salad.\")\n",
+    "vb = input(\"Enter a verb: \")\n",
+    "adj = input(\"Enter an adjective: \")\n",
+    "n1 = input(\"Enter a noun: \")\n",
+    "n2 = input(\"Enter a noun: \")\n",
+    "n3 = input(\"Enter a noun: \")\n",
+    "print(f\"A Shinigami {vb} my {adj} {n1} out of the {n2} as if he were a vegetarian fishing a {n3} out of his salad.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -74552,7 +74579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
